deploy/manifests/ingress/overlays/prod/reads.service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: gnomad-reads
  labels:
    tier: production
spec:
  type: NodePort
  selector:
    name: gnomad-reads
    deployment: '20231031-1717'
  ports:
    - port: 80
      targetPort: 80
