deploy/manifests/ingress/overlays/prod/ingress-paths-patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gnomad-ingress
spec:
  rules:
    - host: gnomad.broadinstitute.org
      http:
        paths:
          - backend:
              service:
                name: gnomad-reads
                port:
                  number: 80
            path: /reads
            pathType: ImplementationSpecific
          - backend:
              service:
                name: gnomad-reads
                port:
                  number: 80
            path: /reads/*
            pathType: ImplementationSpecific
          - backend:
              service:
                name: gnomad-blog
                port:
                  number: 80
            path: /blog
            pathType: ImplementationSpecific
          - backend:
              service:
                name: gnomad-blog
                port:
                  number: 80
            path: /blog/*
            pathType: ImplementationSpecific
          - backend:
              service:
                name: gnomad-blog
                port:
                  number: 80
            path: /news
            pathType: ImplementationSpecific
          - backend:
              service:
                name: gnomad-blog
                port:
                  number: 80
            path: /news/*
            pathType: ImplementationSpecific
          - backend:
              service:
                name: gnomad-browser
                port:
                  number: 80
            pathType: ImplementationSpecific
